--- a/ordering-datafiles.html
+++ b/ordering-datafiles.html
@@ -196,12 +196,14 @@ div.csl-indent {
 <li class="chapter" data-level="5.2" data-path="free-studying-period.html"><a href="free-studying-period.html#the-basics"><i class="fa fa-check"></i><b>5.2</b> the basics</a></li>
 <li class="chapter" data-level="5.3" data-path="free-studying-period.html"><a href="free-studying-period.html#machine-learning"><i class="fa fa-check"></i><b>5.3</b> machine learning</a>
 <ul>
-<li class="chapter" data-level="5.3.1" data-path="free-studying-period.html"><a href="free-studying-period.html#neuro-networks-1-hour"><i class="fa fa-check"></i><b>5.3.1</b> neuro networks (1 hour)</a></li>
+<li class="chapter" data-level="5.3.1" data-path="free-studying-period.html"><a href="free-studying-period.html#neuro-networks"><i class="fa fa-check"></i><b>5.3.1</b> neuro networks</a></li>
 </ul></li>
 <li class="chapter" data-level="5.4" data-path="free-studying-period.html"><a href="free-studying-period.html#code-editors"><i class="fa fa-check"></i><b>5.4</b> code editors</a>
 <ul>
 <li class="chapter" data-level="5.4.1" data-path="free-studying-period.html"><a href="free-studying-period.html#pycharm"><i class="fa fa-check"></i><b>5.4.1</b> pycharm</a></li>
 <li class="chapter" data-level="5.4.2" data-path="free-studying-period.html"><a href="free-studying-period.html#visual-studio-code"><i class="fa fa-check"></i><b>5.4.2</b> visual studio code</a></li>
+<li class="chapter" data-level="5.4.3" data-path="free-studying-period.html"><a href="free-studying-period.html#jupyter-notebook"><i class="fa fa-check"></i><b>5.4.3</b> jupyter notebook</a></li>
+<li class="chapter" data-level="5.4.4" data-path="free-studying-period.html"><a href="free-studying-period.html#obsidian"><i class="fa fa-check"></i><b>5.4.4</b> obsidian</a></li>
 </ul></li>
 <li class="chapter" data-level="5.5" data-path="free-studying-period.html"><a href="free-studying-period.html#conclusion-1"><i class="fa fa-check"></i><b>5.5</b> conclusion</a></li>
 </ul></li>
@@ -297,7 +299,8 @@ div.csl-indent {
 ## |   +-- flu_tidy.csv
 ## |   +-- flu_tidy.rds
 ## |   +-- gapminder.csv
-## |   \-- gapminder.rds
+## |   +-- gapminder.rds
+## |   \-- readme
 ## +-- html
 ## |   +-- CV.html
 ## |   +-- portofolio_opdracht3.2.html
@@ -307,12 +310,12 @@ div.csl-indent {
 ## |   +-- 09_plot2.png
 ## |   +-- 09_plot3.png
 ## |   +-- coefplot_manipution_multiple.png
-## |   +-- image.png
+## |   +-- cv.png
 ## |   \-- readme.txt
 ## +-- index.Rmd
-## +-- learning_phyton
 ## +-- portofolio.Rproj
 ## +-- r
+## |   +-- installing_packages.R
 ## |   +-- readme.txt
 ## |   \-- set_up_script.R
 ## +-- raw
@@ -335,10 +338,13 @@ div.csl-indent {
 ## |   +-- aside.html
 ## |   +-- free-studying-period.html
 ## |   +-- images
+## |   |   +-- 09_plot1 - Copy.png
 ## |   |   +-- 09_plot1.png
+## |   |   +-- 09_plot2 - Copy.png
 ## |   |   +-- 09_plot2.png
 ## |   |   +-- 09_plot3.png
 ## |   |   +-- coefplot_manipution_multiple.png
+## |   |   +-- cv.png
 ## |   |   \-- image.JPG
 ## |   +-- index.html
 ## |   +-- libs
@@ -398,6 +404,15 @@ div.csl-indent {
 ## |   +-- structured-query-language.html
 ## |   \-- _main_files
 ## |       \-- figure-html
+## |           +-- 01graph1-1.png
+## |           +-- 01graph2-1.png
+## |           +-- 01graph3-1.png
+## |           +-- 07graph1-1.png
+## |           +-- 07graph2-1.png
+## |           +-- 07graph3-1.png
+## |           +-- 07graph4-1.png
+## |           +-- 07graph5-1.png
+## |           +-- 07graph6-1.png
 ## |           +-- flu_graph1-1.png
 ## |           +-- graph1-1.png
 ## |           +-- graph2-1.png
@@ -414,6 +429,12 @@ div.csl-indent {
 ##         +-- 01graph1-1.png
 ##         +-- 01graph2-1.png
 ##         +-- 01graph3-1.png
+##         +-- 07graph1-1.png
+##         +-- 07graph2-1.png
+##         +-- 07graph3-1.png
+##         +-- 07graph4-1.png
+##         +-- 07graph5-1.png
+##         +-- 07graph6-1.png
 ##         +-- flu_graph1-1.png
 ##         +-- graph1-1.png
 ##         +-- graph2-1.png
