--- a/refrences.html
+++ b/refrences.html
@@ -196,12 +196,14 @@ div.csl-indent {
 <li class="chapter" data-level="5.2" data-path="free-studying-period.html"><a href="free-studying-period.html#the-basics"><i class="fa fa-check"></i><b>5.2</b> the basics</a></li>
 <li class="chapter" data-level="5.3" data-path="free-studying-period.html"><a href="free-studying-period.html#machine-learning"><i class="fa fa-check"></i><b>5.3</b> machine learning</a>
 <ul>
-<li class="chapter" data-level="5.3.1" data-path="free-studying-period.html"><a href="free-studying-period.html#neuro-networks-1-hour"><i class="fa fa-check"></i><b>5.3.1</b> neuro networks (1 hour)</a></li>
+<li class="chapter" data-level="5.3.1" data-path="free-studying-period.html"><a href="free-studying-period.html#neuro-networks"><i class="fa fa-check"></i><b>5.3.1</b> neuro networks</a></li>
 </ul></li>
 <li class="chapter" data-level="5.4" data-path="free-studying-period.html"><a href="free-studying-period.html#code-editors"><i class="fa fa-check"></i><b>5.4</b> code editors</a>
 <ul>
 <li class="chapter" data-level="5.4.1" data-path="free-studying-period.html"><a href="free-studying-period.html#pycharm"><i class="fa fa-check"></i><b>5.4.1</b> pycharm</a></li>
 <li class="chapter" data-level="5.4.2" data-path="free-studying-period.html"><a href="free-studying-period.html#visual-studio-code"><i class="fa fa-check"></i><b>5.4.2</b> visual studio code</a></li>
+<li class="chapter" data-level="5.4.3" data-path="free-studying-period.html"><a href="free-studying-period.html#jupyter-notebook"><i class="fa fa-check"></i><b>5.4.3</b> jupyter notebook</a></li>
+<li class="chapter" data-level="5.4.4" data-path="free-studying-period.html"><a href="free-studying-period.html#obsidian"><i class="fa fa-check"></i><b>5.4.4</b> obsidian</a></li>
 </ul></li>
 <li class="chapter" data-level="5.5" data-path="free-studying-period.html"><a href="free-studying-period.html#conclusion-1"><i class="fa fa-check"></i><b>5.5</b> conclusion</a></li>
 </ul></li>
