--- a/reproducibility.html
+++ b/reproducibility.html
@@ -196,12 +196,14 @@ div.csl-indent {
 <li class="chapter" data-level="5.2" data-path="free-studying-period.html"><a href="free-studying-period.html#the-basics"><i class="fa fa-check"></i><b>5.2</b> the basics</a></li>
 <li class="chapter" data-level="5.3" data-path="free-studying-period.html"><a href="free-studying-period.html#machine-learning"><i class="fa fa-check"></i><b>5.3</b> machine learning</a>
 <ul>
-<li class="chapter" data-level="5.3.1" data-path="free-studying-period.html"><a href="free-studying-period.html#neuro-networks-1-hour"><i class="fa fa-check"></i><b>5.3.1</b> neuro networks (1 hour)</a></li>
+<li class="chapter" data-level="5.3.1" data-path="free-studying-period.html"><a href="free-studying-period.html#neuro-networks"><i class="fa fa-check"></i><b>5.3.1</b> neuro networks</a></li>
 </ul></li>
 <li class="chapter" data-level="5.4" data-path="free-studying-period.html"><a href="free-studying-period.html#code-editors"><i class="fa fa-check"></i><b>5.4</b> code editors</a>
 <ul>
 <li class="chapter" data-level="5.4.1" data-path="free-studying-period.html"><a href="free-studying-period.html#pycharm"><i class="fa fa-check"></i><b>5.4.1</b> pycharm</a></li>
 <li class="chapter" data-level="5.4.2" data-path="free-studying-period.html"><a href="free-studying-period.html#visual-studio-code"><i class="fa fa-check"></i><b>5.4.2</b> visual studio code</a></li>
+<li class="chapter" data-level="5.4.3" data-path="free-studying-period.html"><a href="free-studying-period.html#jupyter-notebook"><i class="fa fa-check"></i><b>5.4.3</b> jupyter notebook</a></li>
+<li class="chapter" data-level="5.4.4" data-path="free-studying-period.html"><a href="free-studying-period.html#obsidian"><i class="fa fa-check"></i><b>5.4.4</b> obsidian</a></li>
 </ul></li>
 <li class="chapter" data-level="5.5" data-path="free-studying-period.html"><a href="free-studying-period.html#conclusion-1"><i class="fa fa-check"></i><b>5.5</b> conclusion</a></li>
 </ul></li>
@@ -248,11 +250,11 @@ div.csl-indent {
 <div id="reproducibility" class="section level1 hasAnchor" number="3">
 <h1><span class="header-section-number">3</span> reproducibility<a href="reproducibility.html#reproducibility" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>Making sure that research is reproducible, is an important measure to avoid fraud and generating results based on the general interest of a person or company. A big step towards making research reproducible is the movement towards open science, where the methods of both research and the data analysis are shared. In my opinion, open research helps to speed up progression and holds potential to decrease fraud. Therefor, I support the movement towards open science. In this chapter, I will review 2 papers, to show that I am able to determine how open the researchers are about their methods for both the laboratory work and the data analysis.</p>
-<p>The first paper will be a more ‘traditional’ research paper, and is found on <a href="https://pubmed.ncbi.nlm.nih.gov/">pubmed</a>. This paper will be reviewed based upon following ‘Repita’ criteria, as shown in figure <a href="#fig:table2"><strong>??</strong></a>.</p>
+<p>The first paper will be a more ‘traditional’ research paper, and is found on <a href="https://pubmed.ncbi.nlm.nih.gov/">pubmed</a>. This paper will be reviewed based upon following ‘Repita’ criteria, as shown in figure <a href="reproducibility.html#fig:02table1">3.1</a>.</p>
 <p>The second paper, will be a r code paper, and is found on the <a href="https://osf.io/">OSF website</a>. The review of this paper will focus more heavily on the readability and reproducibility of the r code and will be less centered around the criteria shown in figure <a href="reproducibility.html#fig:02table1">3.1</a></p>
 <div class="figure"><span style="display:block;" id="fig:02table1"></span>
-<div id="htmlwidget-3cf730904697b54460e8" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-3cf730904697b54460e8">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8"],["Study Purpose","Data Availability Statement","Data Location","Study Location","Author Review","Ethics Statement","Funding Statement","Code Availability"],["A concise statement in the introduction of the article, often in the last paragraph, that establishes the reason the research was conducted. Also called the study objective.","A statement, in an individual section offset from the main body of text, that explains how or if one can access a study’s data. The title of the section may vary, but it must explicitly mention data; it is therefore distinct from a supplementary materials section.","Where the article’s data can be accessed, either raw or processed.","Author has stated in the methods section where the study took place or the data’s country/region of origin.","The professionalism of the contact information that the author has provided in the manuscript.","A statement within the manuscript indicating any ethical concerns, including the presence of sensitive data.","A statement within the manuscript indicating whether or not the authors received funding for their research.","Authors have shared access to the most updated code that they used in their study, including code used for analysis."],["Binary","Binary","Found Value","Binary; Found Value","Found Value","Binary","Binary","Binary"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Transparency Criteria<\/th>\n      <th>Definition<\/th>\n      <th>Response Type<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-1421eb0d460a83061dd0" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-1421eb0d460a83061dd0">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8"],["Study Purpose","Data Availability Statement","Data Location","Study Location","Author Review","Ethics Statement","Funding Statement","Code Availability"],["A concise statement in the introduction of the article, often in the last paragraph, that establishes the reason the research was conducted. Also called the study objective.","A statement, in an individual section offset from the main body of text, that explains how or if one can access a study’s data. The title of the section may vary, but it must explicitly mention data; it is therefore distinct from a supplementary materials section.","Where the article’s data can be accessed, either raw or processed.","Author has stated in the methods section where the study took place or the data’s country/region of origin.","The professionalism of the contact information that the author has provided in the manuscript.","A statement within the manuscript indicating any ethical concerns, including the presence of sensitive data.","A statement within the manuscript indicating whether or not the authors received funding for their research.","Authors have shared access to the most updated code that they used in their study, including code used for analysis."],["Binary","Binary","Found Value","Binary; Found Value","Found Value","Binary","Binary","Binary"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Transparency Criteria<\/th>\n      <th>Definition<\/th>\n      <th>Response Type<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 <p class="caption">
 Figure 3.1: table with repita criteria for reviewing articles
 </p>
@@ -310,14 +312,18 @@ To test this theory, the study will use an election-forensic analysis of precinc
 <p>this paper proposes that appointed local executives will produce more election manipulation for national parties, but that this comes at a cost to the party’s un-manipulated support.</p>
 <div id="analysing-the-code" class="section level3 hasAnchor" number="3.2.1">
 <h3><span class="header-section-number">3.2.1</span> analysing the code<a href="reproducibility.html#analysing-the-code" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>the provided r code appears to have a few goals:
-- making the data tidy (removing na, proper row/colum orginisation for the data analysis, etc.)
-- visualizing and interpreting the data
-- creating marginal structural models to account for selection bias and confounding.</p>
+<p>the provided r code appears to have a few goals:</p>
+<ul>
+<li>making the data tidy (removing na, proper row/colum orginisation for the data analysis, etc.)</li>
+<li>visualizing and interpreting the data</li>
+<li>creating marginal structural models to account for selection bias and confounding.</li>
+</ul>
 <p>The code has a good readability. It is properly spaced out, and lines of code are provided with comments to explain the code. However, not all code lines have comments. This makes some of the code, sightly harder to read. Therefor, in terms of readability, I rate the code of this paper a 4 out of 5.</p>
-<p>After downloading and running the code, I hardly had to make any changes at all to let the code run. The only changes that were required, were:
-- installing the packages I didnt have yet with the install.package() function.
-- specify where I stored the data files on my computer</p>
+<p>After downloading and running the code, I hardly had to make any changes at all to let the code run. The only changes that were required, were:</p>
+<ul>
+<li>installing the packages I didnt have yet with the install.package() function.</li>
+<li>specify where I stored the data files on my computer</li>
+</ul>
 <p>With the provided code, I was also easily able to recreate the images that were in the original paper. An example of this, is shown in figure <a href="reproducibility.html#fig:02graph1">3.2</a>. This was figure2 in the original paper. In this figure, it is visible that putin has a far higher manipulation than the other politisians ands that appointed exec party also has sightly higher manipulation. Because it was so easy to run the code, and recreate the same figures, the reproducibility of this code gets a 5 out of 5. The used code is further shown down bellow figure <a href="reproducibility.html#fig:02graph1">3.2</a>.</p>
 <div class="figure"><span style="display:block;" id="fig:02graph1"></span>
 <img src="images/coefplot_manipution_multiple.png" alt="recreated graph from reviewed paper" width="1750" />
