--- a/ordering-datafiles.html
+++ b/ordering-datafiles.html
@@ -302,8 +302,6 @@ div.csl-indent {
 ## |   +-- gapminder.rds
 ## |   \-- readme
 ## +-- html
-## |   +-- CV.html
-## |   +-- portofolio_opdracht3.2.html
 ## |   \-- readme.txt
 ## +-- images
 ## |   +-- 09_plot1.png
@@ -314,6 +312,16 @@ div.csl-indent {
 ## |   \-- readme.txt
 ## +-- index.Rmd
 ## +-- portofolio.Rproj
+## +-- python scripts
+## |   +-- calculator.py
+## |   +-- jupyter_notebook
+## |   |   +-- drug200.csv
+## |   |   +-- machine_learning_with_python.ipynb
+## |   |   \-- metadata.xlsx
+## |   +-- password-generator.py
+## |   +-- readme
+## |   +-- reminder-to-get-up.py
+## |   \-- rock-paper-scisorcs.py
 ## +-- r
 ## |   +-- installing_packages.R
 ## |   +-- readme.txt
@@ -329,7 +337,6 @@ div.csl-indent {
 ## |   \-- table_assignment1.2.xlsx
 ## +-- README.md
 ## +-- rmd
-## |   +-- CV.rmd
 ## |   +-- ols models.nb.html
 ## |   +-- ols models.Rmd
 ## |   \-- table_main.html
@@ -344,8 +351,7 @@ div.csl-indent {
 ## |   |   +-- 09_plot2.png
 ## |   |   +-- 09_plot3.png
 ## |   |   +-- coefplot_manipution_multiple.png
-## |   |   +-- cv.png
-## |   |   \-- image.JPG
+## |   |   \-- cv.png
 ## |   +-- index.html
 ## |   +-- libs
 ## |   |   +-- anchor-sections-1.1.0
